[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "free-fire-emote-bot"
version = "1.0.0"
description = "Free Fire Emote Bot API"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "Flask>=2.3.0",
    "requests>=2.31.0",
    "protobuf>=3.20.0",
    "pycryptodome>=3.18.0",
    "aiohttp>=3.8.0",
    "protobuf-decoder>=1.0.0",
    "cfonts>=1.5.0",
    "setuptools>=65.0.0",
    "wheel>=0.38.0"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false